--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,10 @@ ignore = [              # ignore these rules:
     ]
 
 [tool.ruff.lint.pydocstyle]
-convention = "pep257"   # this project's docstrings follow PEP 257
+convention = "pep257"       # this project's docstrings follow PEP 257
+
+[tool.ruff.lint.per-file-ignores]
+"__init__.py" = ["F403"]    # ignore `from ... import *` for re-exporting names
 
 [build-system]
 requires = ["poetry-core"]
