--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.0.1"
 description = "A pedagogical algorithms and data structures library"
 authors = ["Michel Wermelinger <michel.wermelinger@open.ac.uk>"]
 readme = "README.md"
-license = "BDS-3-Clause"
+license = "BSD-3-Clause"
 homepage = "https://dsa-ou.github.io/m269-lib/"
 repository = "https://github.com/dsa-ou/m269-lib"
 keywords = ["algorithms", "data structures", "education"]
@@ -27,6 +27,7 @@ pre-commit = "^3.6.0"
 ruff = "^0.1.9"
 pytype = "^2023.12.18"
 pdoc = "^14.3.0"
+allowed = "^1.3.0"
 
 [tool.pytest.ini_options]
 addopts = "--cov=m269_lib --cov-report term-missing --doctest-modules"
